--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -43,8 +43,16 @@ table {
 	border-spacing: 0;
 }
 
+
+/* User Defined Classes*/
 body{
   background: #121212;
   font-family: 'Nunito', sans-serif;
   color: #fff;
+}
+
+.container{
+	width: 1200px;
+	max-width: 90%;
+	margin:0 auto;
 }
